Fixed category shift when clicking on a product from all category

--- a/src/components/Directory/Directory.styles.scss
+++ b/src/components/Directory/Directory.styles.scss
@@ -30,8 +30,9 @@
 	justify-content: center;
 	text-align: center;
 	gap: 40px;
-	margin-left: 8vw;
-	margin-right: 8vw;
+	margin: 0 8vw;
+	// margin-left: 8vw;
+	// margin-right: 8vw;
 
 	align-self: right;
 	// width: auto;
