--- a/src/components/Navigation/Navigation.styles.scss
+++ b/src/components/Navigation/Navigation.styles.scss
@@ -5,7 +5,7 @@
 	flex-wrap: nowrap;
 	justify-content: space-between;
 	/* top | horizontal | bottom */
-	padding: 1.8vh 8vw 11vh;
+	padding: 1.8vh 8vw 8vh;
 	z-index: 9;
 	// border: 1px solid #000;
 	// flex-direction: row;
